feat: Add admin dashboard (admin.py)
- Added the `admin_dashboard` route to render the admin dashboard template.
- Implemented the `admin_dashboard_data` route to retrieve and return relevant data for the dashboard.
- Included statistics on users, sponsors, campaigns, ad requests, influencers, and flagged items.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,35 @@
-/__pycache__
-__pycache__
-/instance
-instance/test.db
+# Ignore compiled Python files
+__pycache__/
 *.pyc
+
+# Ignore virtual environment
+venv/
+
+# Ignore instance-specific configuration files
+instance/
+
+
+# Ignore any sensitive environment files (e.g., .env)
+*.env
+
+# Ignore database files
 *.db
-/instance
-instance/test.db
-*.pyc
+
+# Ignore logs
+*.log
+
+
+# Ignore any temporary or backup files
+*.bak
+*.swp
+*.tmp
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
+
+# Ignore OS-specific files
+.DS_Store
+Thumbs.db
+
+__pycache__/admin.cpython-312.pyc
